fixed top overflow tooltip

--- a/src/finalPages/recipePage/finalPagesStyles.css
+++ b/src/finalPages/recipePage/finalPagesStyles.css
@@ -11,7 +11,7 @@
     border-radius: 0.4rem;
     position: absolute;
     z-index: 20;
-    bottom: 2.1rem;
+    bottom: 110%;
     left: 50%;
     transform: translateX(-50%);
     opacity: 0;
@@ -26,7 +26,7 @@
 .tooltip::before {
     opacity: 0;
     content: "";
-    bottom: 1.2rem;
+    bottom: 60%;
     left: 50%;
     visibility: hidden;
     position: absolute;
@@ -43,6 +43,29 @@
 }
 
 .tooltip:hover::before {
+    visibility: visible;
+    opacity: 1;
+}
+
+.tooltip.modified::before {
+    border-color: transparent transparent transparent transparent;
+}
+
+.tooltip.modified::after {
+    opacity: 0;
+    content: "";
+    top: 100%;
+    left: 50%;
+    visibility: hidden;
+    position: absolute;
+    margin-left: -0.5rem;
+    border-width: 0.5rem;
+    border-style: solid;
+    transition: opacity 0.3s;
+    border-color: transparent transparent #504221 transparent;
+}
+
+.tooltip.modified:hover::after {
     visibility: visible;
     opacity: 1;
 }
